--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pydantic = {extras = ["email"], version = "^2.9.2"}
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
 aiosqlite = "^0.20.0"
 pydantic-settings = "^2.5.2"
+alembic = "^1.13.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
